# than_pkg_android

./: CHANGELOG.md  README.md  compile_commands.json  pubspec.yaml
android/: CMakeLists.txt  build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: than_pkg_android_plugin.cpp
android/src/main/kotlin/com/example/than_pkg_android/: AndroidFileHandler.kt  AppSettingHandler.kt  BatteryHandler.kt  BrightnessHandler.kt  CameraHandler.kt  DeviceSensorHandler.kt  DownloadHandler.kt  FileSelectorHandler.kt  IntentShareHandler.kt  LaunchHandler.kt  MediaFetchHandler.kt  NativeDownloadManager.kt  NetworkHandler.kt  NotificationHandler.kt  OrientationHandler.kt  OsHandler.kt  PdfHandler.kt  PermissionHandler.kt  PkgHandler.kt  PrivacyHandler.kt  SafeStorageHandler.kt  SimpleNotificationHandler.kt  SoundHandler.kt  StorageHandler.kt  StoragePermissionHandler.kt  TextureHandler.kt  ThanPkgAndroidPlugin.kt  VideoHandler.kt  WifiHandler.kt
android/src/main/res/xml/: file_paths.xml
android/src/test/kotlin/com/example/than_pkg_android/: ThanPkgAndroidPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts
example/integration_test/: plugin_integration_test.dart
example/lib/: battery_manger_example.dart  camera_example.dart  device_sensor_example.dart  file_selector_example.dart  main.dart  media_selector_example.dart  notification_example.dart  path_handler_example.dart  texture_example.dart  (+3 more)
lib/: than_pkg_android.dart
test/: than_pkg_android_method_channel_test.dart  than_pkg_android_test.dart
(+43 files in other folders)
